# docker_drf

./: Dockerfile  README.md  docker-compose.yaml  env_example  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/management/commands/: create_course_lessons.py
materials/migrations/: 0001_initial.py  0002_alter_course_description_alter_lesson_description_and_more.py
users/: admin.py  managers.py  models.py  permission.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: create_paymants.py  create_user.py  csu.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_city_user_phone_alter_user_email_and_more.py
